# CODE-JEPA

./: .gitignore  README.md  pyproject.toml
configs/datasets/: qwen3_reasoning.yaml
configs/evals/: ablation.yaml
configs/runs/: phase0_debug.yaml  phase0_modal_qwen32.yaml  phase0_modal_qwen32_flow.yaml  phase0_modal_qwen32_flow_particles.yaml  phase0_modal_qwen32_thermal.yaml  phase0_modal_qwen32_thermal_dynamics.yaml  phase0_modal_qwen32_token_similarity.yaml  phase0_modal_qwen32_token_similarity_depth8.yaml  phase1_modal_qwen32_token_similarity_depth8_pilot.yaml  phase1_modal_qwen32_train.yaml  phase1_modal_qwen72_pilot.yaml
configs/train/: qwen3_reasoning.yaml  world_model_qwen32_token_similarity.yaml
evals/: __init__.py  ablate_conversions.py  compile_results.py  cross_arch_glm.py  generate_swebench_candidates.py  generate_swebench_candidates_vllm.py  longitudinal_resilience.py  swebench_rerank.py  together_batch_swebench.py
jobs/hf_endpoint/: cross_arch_glm.py
jobs/modal/: extract_phase0.py  (+1 more)
paper/: NEWqwen_candidates_n8.jsonl  qwen_candidates_n8.jsonl
scripts/: dynamics_baselines.py  qwen_candidates_n8.jsonl  train_world_model.py  validate_dataset.py
tests/: test_contracts.py  test_cross_arch_glm.py  test_dataset_generation.py  test_dataset_validation.py  test_dynamics_baselines.py  test_encoding.py  test_env.py  test_generate_swebench_candidates.py  test_hdf5.py  test_lewm_qwen_adapter.py  test_pipeline.py  test_swebench_rerank.py  test_together_batch_swebench.py  test_train_world_model.py  test_validation.py  test_visual_grid.py
(+20 files in other folders)
